Fixed mobile UI bug with background too small

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    width: 100%;
     margin-left: 30px;
     margin-right: 30px;
     background: #f9f9f9;
